🩹 Footerとその上の要素が近すぎたのでmarginの追加と, FIXMEなsvgのz-indexの改善.

--- a/styles/index.module.scss
+++ b/styles/index.module.scss
@@ -65,12 +65,15 @@
 
   svg {
     transform: translateY(0.25rem);
+    position: relative;
+    z-index: 0;
   }
 }
 
 .footer {
   --footer-font-size: 1.5rem;
 
+  margin-top: 4rem;
   padding-bottom: 4rem;
 
   .footer_text {
